--- a/dtssAnWeihai2/AndroidManifest.xml
+++ b/dtssAnWeihai2/AndroidManifest.xml
@@ -11,10 +11,10 @@
     <permission
         android:name="com.dtssAnWeihai.activity.permission.JPUSH_MESSAGE"
         android:protectionLevel="signature" />
-    
+    <!-- 
     <permission android:name="android.permission.BAIDU_LOCATION_SERVICE" >
     </permission>
-
+ -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -155,6 +155,10 @@
             android:screenOrientation="portrait" />
         <activity
             android:name="com.dtssAnWeihai.activity.ZiXunListActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.dtssAnWeihai.activity.ZiXunDetailActivity"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="portrait" />
         <activity
